--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "php" : "~5.6|~7.0",
+        "ext-json": "*",
         "illuminate/support": "~5.2",
         "jippi/vault-php-sdk": "^2.0"
     },
@@ -39,7 +40,12 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Tokenly\\Vault\\VaultServiceProvider"
+                "Tokenly\\Vault\\Providers\\LaravelServiceProvider"
+            ]
+        },
+        "lumen": {
+            "providers": [
+                "Tokenly\\Vault\\Providers\\LumenServiceProvider"
             ]
         }
     }
