--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php" : "~5.6|~7.0",
         "ext-json": "*",
         "illuminate/support": "~5.2",
-        "jippi/vault-php-sdk": "^2.0"
+        "illuminate/http": "~5.2",
+        "jippi/vault-php-sdk": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0||~6.0",
