--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     ],
     "require": {
         "php" : "~5.6|~7.0",
-        "illuminate/support": "~5.2",
-        "jippi/vault-php-sdk": "^2.0"
+        "illuminate/support": "~6",
+        "jippi/vault-php-sdk": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0||~5.0||~6.0",
-        "squizlabs/php_codesniffer": "^2.3"
+        "phpunit/phpunit" : "~4.0||~5.0||~6.0||~7.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
